--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,7 @@
 @import url("../main.css");
 @import url("./hero.css");
 @import url("./home.css");
+@import url("./footer.css");
 
 .dropdown-menu li {
     position: relative;
@@ -44,10 +45,6 @@
 }
 .navbar-nav {
     column-gap: 32px;
-}
-.btn_square {
-    width: 44px;
-    height: 44px;
 }
 .nav-link {
     color: #fff;
