--- a/css/card.css
+++ b/css/card.css
@@ -15,7 +15,7 @@
 }
 .card__img {
     max-height: 210px;
-    object-fit: none;
+    width: 100%;
 }
 .card__title {
     font-family: "Manrope";
@@ -81,4 +81,22 @@
 }
 .card__btn:hover{
     color: #F23058;
+}
+
+.card .presentation{
+    gap: 7px;
+}
+.card .splide__pagination__page{
+    width: 7px;
+    height: 7px;
+    background-color: var(--black);
+    border-radius: 7px;
+}
+.card .splide__pagination__page[aria-selected="true"]{
+    width: 30px;
+    border: 1px solid #F23058;
+    background-color: transparent;
+    margin-left: 7px;
+    margin-right: 7px;
+    opacity: 1;
 }
