--- a/css/footer.css
+++ b/css/footer.css
@@ -1,13 +1,15 @@
 .footer {
-    background: linear-gradient(89.02deg, #eb5757 8.91%, #ff3565 89.22%);
-    padding: 50px 0 40px;
+    background-image: url("../img/hero-bubbles.png"),
+        linear-gradient(89.02deg, #eb5757 8.91%, #ff3565 89.22%);
     color: #fff;
+    background-repeat: no-repeat;
+    background-position: center top;
 }
 .footer__content {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-bottom: 39px;
+    padding: 50px 0 39px;
     border-bottom: 1px solid #fff;
     gap: 80px 20px;
 }
@@ -25,7 +27,7 @@
     margin-bottom: 0;
     max-width: 580px;
 }
-.footer__list{
+.footer__list {
     margin: 0;
     padding: 0;
 }
@@ -42,8 +44,86 @@
     line-height: 24px;
     text-transform: capitalize;
     color: #fff;
+    transition: 0.3s;
 }
-.head__item{
+.footer_list_link:hover {
+    color: #ddd;
+}
+.head__item {
     font-size: 16px;
     font-weight: 700;
+}
+
+.footer__contact {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 0;
+    border-bottom: 1px solid #fff;
+}
+.footer_contact_blog {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 550px;
+    gap: 10px 36px;
+}
+.footer_contact_title {
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #fff;
+    margin-bottom: 15px;
+}
+.footer_contact_text {
+    font-family: "Open Sans";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #fff;
+}
+.footer_contact_link {
+    font-family: "Manrope";
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 24px;
+    color: #fff;
+}
+.socials {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 15px;
+}
+.social__media {
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+    color: #f7375e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+.social__media:hover {
+    color: #f7375e;
+}
+.social__media i {
+    font-size: 14px;
+}
+
+.footer__terms {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 0;
+}
+.footer_terms_text {
+    font-family: "Open Sans";
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+}
+.footer_terms_blog {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px 80px;
 }
