--- a/components/nav-light.html
+++ b/components/nav-light.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar nav__light navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="/"><img src="../img/icon/logo-white.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img src="../img/icon/logo-black.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
