--- a/components/nav-light.html
+++ b/components/nav-light.html
@@ -1,9 +1,8 @@
 <nav class="navbar nav__light navbar-expand-lg">
     <div class="container">
         <a class="navbar-brand" href="/"><img src="../img/icon/logo-black.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -11,38 +10,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/about.html">About</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-mdb-toggle="dropdown" aria-expanded="false">
-                        Products
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li>
-                            <a class="dropdown-item" href="#">FIDO2 Keys</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">
-                                Classic Tokens &raquo;
-                            </a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li>
-                                    <a class="dropdown-item" href="#">Token2 c202 TOTP hardware token</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Token2 c202 hardware token - 10 pack</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Token2 c202 hardware token - 5 pack</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Programmable Tokens</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">TOTPRadius</a>
-                        </li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/products.html">Products &raquo;</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Tools</a>
@@ -74,3 +43,5 @@
     </button> -->
     </div>
 </nav>
+<!-- header bubbles -->
+<img src="../img/hero-bubbles-white.png" alt="" class="header__bubbles">
