--- a/css/card.css
+++ b/css/card.css
@@ -14,8 +14,9 @@
     padding: 0 17px 17px 17px;
 }
 .card__img {
-    max-height: 210px;
+    max-height: 200px;
     width: 100%;
+    object-fit: none;
 }
 .card__title {
     font-family: "Manrope";
@@ -72,15 +73,18 @@
     color: #f23058;
     transform: translate(-4px, -4px);
 }
-.card__btn{
+.card__buttons{
     position: absolute;
     top: 10px;
     right: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.card__btn{
     background: #F6F7F9;
     color: #F23058;
-}
-.card__btn:hover{
-    color: #F23058;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .card .presentation{
@@ -99,4 +103,7 @@
     margin-left: 7px;
     margin-right: 7px;
     opacity: 1;
+}
+.card_btn_tooltip{
+    --bs-tooltip-bg: #FDFDFD;
 }
