--- a/components/nav.html
+++ b/components/nav.html
@@ -11,38 +11,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../pages/about.html">About</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-mdb-toggle="dropdown" aria-expanded="false">
-                        Products
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li>
-                            <a class="dropdown-item" href="#">FIDO2 Keys</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">
-                                Classic Tokens &raquo;
-                            </a>
-                            <ul class="dropdown-menu dropdown-submenu">
-                                <li>
-                                    <a class="dropdown-item" href="#">Token2 c202 TOTP hardware token</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Token2 c202 hardware token - 10 pack</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Token2 c202 hardware token - 5 pack</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Programmable Tokens</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">TOTPRadius</a>
-                        </li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="../pages/products.html">Products &raquo;</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Tools</a>
