--- a/css/const.css
+++ b/css/const.css
@@ -36,3 +36,11 @@ p{
 a:hover{
     color: inherit;
 }
+.white_to_red_btn{
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #f23058;
+    --bs-btn-hover-border-color: #f23058;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #f23058;
+    --bs-btn-active-border-color: #f23058;
+}
