--- a/components/footer.html
+++ b/components/footer.html
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="footer__terms">
+        <div class="footer__terms between_center">
             <div class="footer_terms_blog">
                 <a href="#" class="footer_contact_link">
                     Privacy policy
