--- a/components/subscribe.html
+++ b/components/subscribe.html
@@ -1,5 +1,5 @@
 <section class="subscribe">
-    <div class="container">
+    <div class="container between_center">
         <div class="subscribe__content">
             <h3 class="subscribe__title">
                 Subscribe to our newsletter
