--- a/components/nav.css
+++ b/components/nav.css
@@ -9,8 +9,10 @@
 .header__light {
     height: auto;
     background-image: none;
+    max-width: 100vw;
 }
 .navbar {
+    position: relative;
     box-shadow: none;
 }
 .navbar-brand {
@@ -42,9 +44,9 @@
     column-gap: 32px;
 }
 .nav-link {
-    color: #fff;
+    --bs-nav-link-color: #fff
 }
-.nav-link:hover {
+.nav-link:hover, .nav-link:focus {
     color: #eee;
 }
 .nav__light .nav-link {
@@ -79,4 +81,49 @@
     left: 200px;
     top: 0px;
     z-index: -1;
+    width: 100%;
+    max-width: 100vw;
+    height: 100%;
+    overflow: hidden;
+}
+
+/* ============ desktop view ============ */
+@media all and (min-width: 992px) {
+
+	.dropdown-menu li{
+		position: relative;
+	}
+	.dropdown-menu .submenu{ 
+		display: none;
+		position: absolute;
+		left:100%; top:-7px;
+	}
+	.dropdown-menu .submenu-left{ 
+		right:100%; left:auto;
+	}
+
+	.dropdown-menu > li:hover{ background-color: #f1f1f1 }
+	.dropdown-menu > li:hover > .submenu{
+		display: block;
+	}
+}	
+
+/* ============ small devices ============ */
+@media (max-width: 991px) {
+
+.dropdown-menu .dropdown-menu{
+		margin-left:0.7rem; margin-right:0.7rem; margin-bottom: .5rem;
+}
+
+}	
+
+
+@media (max-width: 1400px) {
+    
+}
+@media (max-width: 1400px) {
+    
+}
+@media (max-width: 1400px) {
+    
 }
