--- a/components/footer.css
+++ b/components/footer.css
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
     padding: 50px 0 39px;
     border-bottom: 1px solid #fff;
-    gap: 80px 20px;
+    gap: 20px 80px;
 }
 .footer__logos {
     display: flex;
@@ -57,6 +57,7 @@
 .footer__contact {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 40px 0;
     border-bottom: 1px solid #fff;
 }
@@ -123,4 +124,26 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px 80px;
+}
+
+@media (max-width: 992px) {
+    .footer__content{
+        justify-content: start;
+        gap: 20px 60px;
+    }
+    .footer__contact{
+        row-gap: 15px;
+    }
+}
+@media (max-width: 425px) {
+    .footer__logos img{
+        width: 80%;
+    }
+    .footer__content{
+        column-gap: 50px;
+        padding: 30px 19px;
+    }
+    .footer__contact, .footer__terms {
+        padding: 20px 0;
+    }
 }
