--- a/components/nav-light.html
+++ b/components/nav-light.html
@@ -1,34 +1,66 @@
 <nav class="navbar nav__light navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="/"><img src="../img/icon/logo-black.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <i class="fa-regular fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/products.html">Products &raquo;</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tools</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Guides</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">FAQ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts</a>
-                </li>
-            </ul>
+        <a class="navbar-brand" href="/"><img src="../img/icon/logo-black.png" alt=""></a>
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <button type="button" class="btn-close btn btn-dark btn-sm" data-bs-dismiss="offcanvas"
+                    aria-label="Close">
+                    <i class="fa-regular fa-xmark"></i>
+                </button>
+                <a class="navbar-brand" href="/"><img src="../img/icon/logo-black.png" alt=""></a>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../pages/products.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Products
+                        </a>
+                        <ul class="dropdown-menu" data-bs-popper="none">
+                            <li><a class="dropdown-item" href="../pages/products.html">FIDO2 Keys</a></li>
+                            <li><a class="dropdown-item" href="../pages/products.html">
+                                    Classic Tokens
+                                    <i class="fa-regular fa-right-long ms-2"></i>
+                                </a>
+                                <ul class="submenu dropdown-menu">
+                                    <li><a class="dropdown-item" href="../pages/products.html">Token2 c202 TOTP hardware
+                                            token</a></li>
+                                    <li><a class="dropdown-item" href="../pages/products.html">Token2 c202 hardware
+                                            token - 10 pack</a></li>
+                                    <li><a class="dropdown-item" href="../pages/products.html">Token2 c202 hardware
+                                            token - 5 pack</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item" href="../pages/products.html">Programmable Tokens</a></li>
+                            <li><a class="dropdown-item" href="../pages/products.html">TOTPRadius</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tools</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Guides</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacts</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="nav__actions">
             <button type="button" class="btn nav__btn btn__square me-2">
@@ -37,10 +69,10 @@
             <button type="button" class="btn nav__btn">
                 <i class="fa-regular fa-cart-shopping me-1"></i> 30
             </button>
+            <!-- <button type="button" class="btn nav__btn btn__square">
+                <i class="fa-regular fa-arrow-right-from-bracket"></i>
+            </button> -->
         </div>
-        <!-- <button type="button" class="btn nav__btn btn__square">
-        <i class="fa-regular fa-arrow-right-from-bracket"></i>
-    </button> -->
     </div>
 </nav>
 <!-- header bubbles -->
