--- a/components/nav.css
+++ b/components/nav.css
@@ -117,6 +117,8 @@
 }
 .offcanvas {
     --bs-offcanvas-width: 350px;
+    transition: transform .2s;
+    max-width: 100vw;
 }
 
 /* ============ desktop view ============ */
