--- a/components/subscribe.css
+++ b/components/subscribe.css
@@ -2,6 +2,10 @@
     background: #e1ddd9;
     padding: 80px 0;
 }
+.subscribe .container{
+    flex-wrap: wrap;
+    gap: 30px 20px;
+}
 .subscribe__title {
     font-family: "Manrope";
     font-weight: 800;
@@ -48,4 +52,39 @@
     font-size: 14px;
     line-height: 24px;
     color: var(--black);
+}
+
+@media (max-width: 768px) {
+    .subscribe{
+        padding: 40px 0;
+    }
+    .subscribe__title{
+        font-size: 30px;
+    }
+    .subscribe__text{
+        font-size: 18px;
+        line-height: 25px;
+    }
+}
+@media (max-width: 576px) {
+    .subscribe__title{
+        font-size: 25px;
+        line-height: 40px;
+    }
+    .subscribe__text{
+        font-size: 16px;
+        line-height: 22px;
+    }
+    .subscribe__input{
+        min-width: auto !important;
+    }
+}
+@media (max-width: 425px) {
+    .subscribe{
+        padding: 25px 0;
+    }
+    .subscribe__title{
+        font-size: 24px;
+        line-height: 32px;
+    }
 }
