--- a/css/const.css
+++ b/css/const.css
@@ -62,10 +62,24 @@ a:hover {
     opacity: 1 !important;
 }
 .splide__arrow svg {
-    fill: var(--black);
+    fill: var(--black) !important;
 }
 .between_center{
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+@media (max-width: 576px) {
+    .splide__arrow{
+        width: 45px !important;
+        height: 45px !important;
+        border-radius: 15px !important;
+    }
+}
+@media (max-width: 425px) {
+    .splide__arrow{
+        width: 36px !important;
+        height: 36px !important;
+        border-radius: 10px !important;
+    }
 }
