feat:create page and responsive(Personal Page Complete Orders)

--- a/components/nav.html
+++ b/components/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg mb-3">
     <div class="container">
         <button class="btn nav_menu_btn" type="button" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -63,9 +63,9 @@
             </div>
         </div>
         <div class="nav__actions">
-            <button type="button" class="btn nav__btn btn__square me-2">
+            <a href="../pages/completed_orders.html" type="button" class="btn nav__btn btn__square me-2">
                 <i class="fa-regular fa-user"></i>
-            </button>
+            </a>
             <button type="button" class="btn nav__btn">
                 <i class="fa-regular fa-cart-shopping me-1"></i> 30
             </button>
